--- a/css/style.css
+++ b/css/style.css
@@ -27,9 +27,9 @@ nav li {
 }
 .wrapper {
   margin: auto;
-  border: 3px solid red;
+  /*border: 3px solid red;*/
   text-align: center;
-  background-color: rgba(0, 0, 0, 0.3);
+  /*background-color: rgba(0, 0, 0, 0.3);*/
   padding: 10px;
 }
 .wrapper h1 {
@@ -52,6 +52,27 @@ div .button {
   margin: 10px;
   padding: 10px 45px;
   text-transform: uppercase;
+  /*position: relative;*/
+}
+.button::before{
+  font-family: FontAwesome;
+  font-style: normal;
+  font-weight: normal;
+  text-decoration: inherit;
+  color: #000;
+  font-size: 20px;
+  padding-right: 0.5em;
+  top: 10px;
+  left: 0;
+}
+.twitter::before {
+  content: "\f099";
+}
+.github::before {
+  content: "\f09b";
+}
+.linkedin::before {
+  content: "\f0e1"
 }
 
 /*------Portfolio------*/
