--- a/css/style.css
+++ b/css/style.css
@@ -8,12 +8,23 @@ body {
 }
 /*---------Nav---------*/
 nav {
-  background-color: black;
-  height: 2em;
+  background-color: rgba(0, 0, 0, 0.7);
+  /*border: 2px solid white;*/
+  width: 100%;
+  position: fixed;
 }
 nav li {
-  display: inline-block;
   float: right;
+  display: inline-block;
+  color: white;
+  /*border: 2px solid white;*/
+  padding: 5px 10px;
+  font-size: 20px;
+  text-transform: uppercase;
+}
+nav li a{
+  text-decoration: none;
+  color: white;
 }
 
 /*-------Banner--------*/
@@ -27,9 +38,7 @@ nav li {
 }
 .wrapper {
   margin: auto;
-  /*border: 3px solid red;*/
   text-align: center;
-  /*background-color: rgba(0, 0, 0, 0.3);*/
   padding: 10px;
 }
 .wrapper h1 {
@@ -44,15 +53,20 @@ nav li {
 .wrapper div {
   display: inline;
 }
-div .button {
+.button {
   border: 1px solid white;
   border-radius: 5px;
   background-color: white;
   color: black;
   margin: 10px;
-  padding: 10px 45px;
+  padding: 10px 16px;
   text-transform: uppercase;
+  font-size: 20px;
+  text-decoration: none;
   /*position: relative;*/
+}
+.button::hover {
+  cursor: pointer;
 }
 .button::before{
   font-family: FontAwesome;
@@ -76,7 +90,12 @@ div .button {
 }
 
 /*------Portfolio------*/
-
+.portfolio {
+  color: #5F5F5F;
+}
+.col {
+  width: 50%;
+}
 
 /*-------Media Queries--------*/
 @media (max-width: 580px) {
